# jupyter_notebooks

./: Jupiter install poetry.ipynb  pyproject.toml
