[tool.poetry]
name = "Jupyter_notebook"
version = "0.1.0"
description = ""
authors = ["Yana Postnova"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
